--- a/src/Blazor.Diagrams/wwwroot/default.styles.css
+++ b/src/Blazor.Diagrams/wwwroot/default.styles.css
@@ -69,3 +69,7 @@
     border-radius: 15px;
     padding: 20px;
 }
+
+    .diagram-navigator.default .current-view {
+        border: 2px solid #40babd;
+    }
