--- a/src/Blazor.Diagrams/wwwroot/style.css
+++ b/src/Blazor.Diagrams/wwwroot/style.css
@@ -35,3 +35,8 @@
 .diagram-navigator {
     z-index: 10;
 }
+
+    .diagram-navigator .current-view {
+        position: absolute;
+        border: 2px solid black;
+    }
