--- a/src/Blazor.Diagrams/Components/Navigator.razor
+++ b/src/Blazor.Diagrams/Components/Navigator.razor
@@ -20,10 +20,10 @@
         <svg width="@(Width.ToInvariantString())px" height="@(Height.ToInvariantString())px">
             @foreach (var node in DiagramManager.Nodes.Where(n => n.Size != null))
             {
-                var left = (Math.Max(0, node.Position.X + addedNodeX)) * XFactor;
-                var top = (Math.Max(0, node.Position.Y + addedNodeY)) * YFactor;
-                var width = node.Size.Width * XFactor;
-                var height = node.Size.Height * YFactor;
+                var left = (Math.Max(0, node.Position.X * DiagramManager.Zoom) + addedNodeX) * XFactor;
+                var top = (Math.Max(0, node.Position.Y * DiagramManager.Zoom) + addedNodeY) * YFactor;
+                var width = node.Size.Width * DiagramManager.Zoom * XFactor;
+                var height = node.Size.Height * DiagramManager.Zoom * YFactor;
 
                 <g @key="node.Id" transform="translate(@left.ToInvariantString(), @top.ToInvariantString())">
                     <rect fill="#40babd"
