Add SnapToGrid demo

--- a/samples/SharedDemo/Layouts/DemoLayout.razor
+++ b/samples/SharedDemo/Layouts/DemoLayout.razor
@@ -38,6 +38,7 @@
             <a href="demos/custom-node" class="list-group-item list-group-item-action bg-light">Custom node</a>
             <a href="demos/performance" class="list-group-item list-group-item-action bg-light">Performance</a>
             <a href="demos/zoomtofit" class="list-group-item list-group-item-action bg-light">Zoom to fit</a>
+            <a href="demos/snaptogrid" class="list-group-item list-group-item-action bg-light">Snap to Grid</a>
         </div>
     </div>
     <div id="page-content-wrapper">
