Add ability to group using CTRL+G

--- a/src/Blazor.Diagrams/Components/DiagramCanvas.razor
+++ b/src/Blazor.Diagrams/Components/DiagramCanvas.razor
@@ -8,6 +8,7 @@
      @onmousemove:preventDefault
      @onmouseup="OnMouseUp"
      @onkeydown="OnKeyDown"
+     @onkeydown:preventDefault
      @onwheel="OnWheel"
      @onwheel:stopPropagation>
 
