Auto select all nodes in group if one of them is selected

--- a/src/Blazor.Diagrams/Components/NodeWidget.razor
+++ b/src/Blazor.Diagrams/Components/NodeWidget.razor
@@ -1,6 +1,6 @@
 ﻿@inherits NodeWidgetBaseComponent
 
-<div class="node default @(Node.Selected ? "selected" : "")"
+<div class="node default @(Node.Group != null ? "grouped" : "") @(Node.Selected ? "selected" : "")"
      @onmousedown="OnMouseDown"
      @onmousedown:stopPropagation
      @ref="element"
