Add Grouping demo

--- a/samples/SharedDemo/Layouts/DemoLayout.razor
+++ b/samples/SharedDemo/Layouts/DemoLayout.razor
@@ -39,6 +39,7 @@
             <a href="demos/performance" class="list-group-item list-group-item-action bg-light">Performance</a>
             <a href="demos/zoomtofit" class="list-group-item list-group-item-action bg-light">Zoom to fit</a>
             <a href="demos/snaptogrid" class="list-group-item list-group-item-action bg-light">Snap to Grid</a>
+            <a href="demos/grouping" class="list-group-item list-group-item-action bg-light">Grouping</a>
         </div>
     </div>
     <div id="page-content-wrapper">
