--- a/src/Blazor.Diagrams/Components/SvgNodeWidget.razor
+++ b/src/Blazor.Diagrams/Components/SvgNodeWidget.razor
@@ -1,4 +1,4 @@
-﻿@inherits NodeWidgetBaseComponent
+﻿@inherits NodeWidgetBaseComponent<NodeModel>
 
 <g class="node default @(Node.Selected ? "selected" : "")"
    @onmousedown="OnMouseDown"
