Add customization doc (nodes only for now)

--- a/samples/SharedDemo/Home.razor
+++ b/samples/SharedDemo/Home.razor
@@ -61,6 +61,16 @@
                         <a class="link" href="demos/simple"><span></span></a>
                     </div>
                 </div>
+                <div class="item item-pink item-2 col-lg-4 col-6">
+                    <div class="item-inner">
+                        <div class="icon-holder">
+                            <span aria-hidden="true" class="icon fa fa-sliders-h"></span>
+                        </div>
+                        <h3 class="title">Customization</h3>
+                        <p class="intro">Learn how to customize Z.Blazor.Diagrams to your needs, starting with nodes and links.</p>
+                        <a class="link" href="customization"><span></span></a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
