--- a/src/Blazor.Diagrams/wwwroot/default.styles.css
+++ b/src/Blazor.Diagrams/wwwroot/default.styles.css
@@ -1,21 +1,25 @@
-﻿.node.default {
+﻿.default-node {
     width: 100px;
     height: 80px;
     border-radius: 10px;
     background-color: #f5f5f5;
     border: 1px solid #e8e8e8;
     box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0,0,0,.12);
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-    .node.default.selected {
+    .default-node.selected {
         border: 1px solid #6e9fd4;
     }
 
-        .node.default.selected .port {
+        .default-node.selected .port {
             border: 1px solid #6e9fd4;
         }
 
-    .node.default .port {
+    .default-node .port {
         width: 20px;
         height: 20px;
         border-radius: 50%;
@@ -24,42 +28,33 @@
         cursor: pointer;
     }
 
-        .node.default .port:hover, .node.default .port.has-links {
+        .default-node .port:hover, .default-node .port.has-links {
             background-color: black;
         }
 
-        .node.default .port.bottom {
+        .default-node .port.bottom {
             position: absolute;
             bottom: -10px;
             left: 40px;
         }
 
-        .node.default .port.top {
+        .default-node .port.top {
             position: absolute;
             top: -10px;
             left: 40px;
         }
 
-        .node.default .port.left {
+        .default-node .port.left {
             position: absolute;
             left: -10px;
             top: 30px;
         }
 
-        .node.default .port.right {
+        .default-node .port.right {
             position: absolute;
             right: -10px;
             top: 30px;
         }
-
-    .node.default > .node-content {
-        width: 100%;
-        height: 100%;
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
 
 .diagram-navigator.default {
     position: absolute;
