--- a/src/Blazor.Diagrams/Components/NodeWidget.razor
+++ b/src/Blazor.Diagrams/Components/NodeWidget.razor
@@ -2,7 +2,7 @@
     Node Title
     @foreach (var port in Node.Ports)
     {
-        <PortWidget Port="port" />
+        <PortRenderer Port="port" Class="default"></PortRenderer>
     }
 </div>
 
