--- a/src/Blazor.Diagrams/Components/Renderers/PortRenderer.razor
+++ b/src/Blazor.Diagrams/Components/Renderers/PortRenderer.razor
@@ -1,5 +1,5 @@
 ﻿<div class="port @Port.Alignment.ToString().ToLower() @(Port.Links.Count > 0 ? "has-links" : "") @Class"
-     @ref="element"
+     @ref="_element"
      @onmousedown="OnMouseDown"
      @onmousedown:stopPropagation
      @onmouseup="OnMouseUp">
