--- a/samples/SharedDemo/Demos/BotAnswerWidget.razor
+++ b/samples/SharedDemo/Demos/BotAnswerWidget.razor
@@ -10,7 +10,7 @@
 
     @foreach (var port in Node.Ports)
     {
-        <PortWidget Port="port" />
+        <PortRenderer Port="port"></PortRenderer>
     }
 </div>
 
