--- a/samples/SharedDemo/_Imports.razor
+++ b/samples/SharedDemo/_Imports.razor
@@ -6,3 +6,4 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Blazor.Diagrams.Core.Extensions;
+@using Blazor.Diagrams.Components.Renderers;
