--- a/samples/SharedDemo/Demos/SnapToGrid.razor
+++ b/samples/SharedDemo/Demos/SnapToGrid.razor
@@ -9,7 +9,8 @@
         base.OnInitialized();
 
         LayoutData.Title = "Snap to Grid";
-        LayoutData.Info = "This diagram has a grid size of 50, moving nodes will make them automatically snap.";
+        LayoutData.Info = "This diagram has a grid size of 50, moving nodes will make them automatically snap.<br />" +
+                "The background grid isn't added by Z.Blazor.Diagrams, in order for you to use whatever you want.";
         LayoutData.DataChanged();
     }
 }
