--- a/samples/SharedDemo/wwwroot/css/styles.css
+++ b/samples/SharedDemo/wwwroot/css/styles.css
@@ -1584,3 +1584,8 @@ body {
         top: -10px;
         left: 115px;
     }
+
+.diagram-canvas {
+    background-size: 50px 50px;
+    background-image: linear-gradient(to right, rgb(0, 0, 0, 0.05) 1px, transparent 1px), linear-gradient(to bottom, rgb(0, 0, 0, 0.05) 1px, transparent 1px);
+}
