--- a/src/Blazor.Diagrams/Components/DiagramCanvas.razor
+++ b/src/Blazor.Diagrams/Components/DiagramCanvas.razor
@@ -1,6 +1,6 @@
 ﻿@inherits DiagramCanvasComponent
 
-<div class="diagram-canvas"
+<div class="diagram-canvas @Class"
      tabindex="-1"
      @ref="elementReference"
      @onmousedown="OnMouseDown"
