--- a/samples/SharedDemo/Demos/SnapToGrid.razor
+++ b/samples/SharedDemo/Demos/SnapToGrid.razor
@@ -16,7 +16,7 @@
 }
 
 <CascadingValue Name="DiagramManager" Value="diagramManager">
-    <DiagramCanvas>
+    <DiagramCanvas Class="grid">
         <Widgets>
             <Navigator Width="300" Height="200" DefaultStyle="true"></Navigator>
         </Widgets>
