docs: add Options documentation

--- a/samples/SharedDemo/Home.razor
+++ b/samples/SharedDemo/Home.razor
@@ -51,7 +51,7 @@
                         <a class="link" href="quickstart"><span></span></a>
                     </div>
                 </div>
-                <div class="item item-pink item-2 col-lg-4 col-6">
+                <div class="item item-primary item-2 col-lg-4 col-6">
                     <div class="item-inner">
                         <div class="icon-holder">
                             <span aria-hidden="true" class="icon icon_puzzle_alt"></span>
@@ -69,6 +69,16 @@
                         <h3 class="title">Customization</h3>
                         <p class="intro">Learn how to customize Z.Blazor.Diagrams to your needs, starting with nodes and links.</p>
                         <a class="link" href="customization"><span></span></a>
+                    </div>
+                </div>
+                <div class="item item-purple item-2 col-lg-4 col-6">
+                    <div class="item-inner">
+                        <div class="icon-holder">
+                            <span aria-hidden="true" class="icon fa fa-cogs"></span>
+                        </div>
+                        <h3 class="title">Options</h3>
+                        <p class="intro">A list of all the available diagram options, as well as their descriptions.</p>
+                        <a class="link" href="options"><span></span></a>
                     </div>
                 </div>
             </div>
