docs: add custom link/port demos

--- a/samples/SharedDemo/Layouts/DemoLayout.razor
+++ b/samples/SharedDemo/Layouts/DemoLayout.razor
@@ -35,11 +35,14 @@
             <a href="demos/locked" class="list-group-item list-group-item-action bg-light">Locked models</a>
             <a href="demos/events" class="list-group-item list-group-item-action bg-light">Events</a>
             <a href="demos/dynamic-insertions" class="list-group-item list-group-item-action bg-light">Dynamic insertions</a>
-            <a href="demos/custom-node" class="list-group-item list-group-item-action bg-light">Custom node</a>
             <a href="demos/performance" class="list-group-item list-group-item-action bg-light">Performance</a>
             <a href="demos/zoomtofit" class="list-group-item list-group-item-action bg-light">Zoom to fit</a>
             <a href="demos/snaptogrid" class="list-group-item list-group-item-action bg-light">Snap to Grid</a>
             <a href="demos/grouping" class="list-group-item list-group-item-action bg-light">Grouping</a>
+
+            <a href="demos/custom-node" class="list-group-item list-group-item-action bg-light">Custom node</a>
+            <a href="demos/custom-link" class="list-group-item list-group-item-action bg-light">Custom link</a>
+            <a href="demos/custom-port" class="list-group-item list-group-item-action bg-light">Custom port</a>
         </div>
     </div>
     <div id="page-content-wrapper">
