feat: add main titles in demo menu

--- a/samples/SharedDemo/Layouts/DemoLayout.razor
+++ b/samples/SharedDemo/Layouts/DemoLayout.razor
@@ -40,6 +40,7 @@
             <a href="demos/snaptogrid" class="list-group-item list-group-item-action bg-light">Snap to Grid</a>
             <a href="demos/grouping" class="list-group-item list-group-item-action bg-light">Grouping</a>
 
+            <div class="list-group-item bg-primary text-light">Customization</div>
             <a href="demos/custom-node" class="list-group-item list-group-item-action bg-light">Custom node</a>
             <a href="demos/custom-link" class="list-group-item list-group-item-action bg-light">Custom link</a>
             <a href="demos/custom-port" class="list-group-item list-group-item-action bg-light">Custom port</a>
