Added reconnect links functionality where a link between nodes is reconnected to the ports of the nodes that have the shortest distance between them.

--- a/samples/SharedDemo/Layouts/DemoLayout.razor
+++ b/samples/SharedDemo/Layouts/DemoLayout.razor
@@ -39,6 +39,7 @@
             <a href="demos/zoomtofit" class="list-group-item list-group-item-action bg-light">Zoom to fit</a>
             <a href="demos/snaptogrid" class="list-group-item list-group-item-action bg-light">Snap to Grid</a>
             <a href="demos/grouping" class="list-group-item list-group-item-action bg-light">Grouping</a>
+            <a href="demos/reconnectlink" class="list-group-item list-group-item-action bg-light">Reconnect links</a>
 
             <div class="list-group-item bg-primary text-light">Customization</div>
             <a href="demos/custom-node" class="list-group-item list-group-item-action bg-light">Custom node</a>
