feat: Add algorithms project with links reconnection algorithm

--- a/samples/SharedDemo/Layouts/DemoLayout.razor
+++ b/samples/SharedDemo/Layouts/DemoLayout.razor
@@ -45,6 +45,9 @@
             <a href="demos/custom-node" class="list-group-item list-group-item-action bg-light">Custom node</a>
             <a href="demos/custom-link" class="list-group-item list-group-item-action bg-light">Custom link</a>
             <a href="demos/custom-port" class="list-group-item list-group-item-action bg-light">Custom port</a>
+
+            <div class="list-group-item bg-primary text-light">Algorithms</div>
+            <a href="demos/reconnect-links" class="list-group-item list-group-item-action bg-light">Reconnect links</a>
         </div>
     </div>
     <div id="page-content-wrapper">
