--- a/src/Blazor.Diagrams/Components/DiagramCanvas.razor
+++ b/src/Blazor.Diagrams/Components/DiagramCanvas.razor
@@ -14,7 +14,7 @@
     @* Links *@
     <svg class="diagram-svg-layer"
          style="transform: translate(@(PanX)px, @(PanY)px) scale(@Zoom);">
-        @foreach (var link in DiagramManager.AllLinks.Where(l => l.SourcePort.Parent.Group == null && l.TargetPort.Parent.Group == null))
+        @foreach (var link in DiagramManager.AllLinks.Where(l => l.SourcePort.Parent.Group == null && l.TargetPort?.Parent.Group == null))
         {
             <LinkRenderer @key="link.Id" Link="link" />
         }
@@ -34,7 +34,7 @@
             <GroupRenderer Group="group" />
         }
 
-        @foreach (var node in DiagramManager.Nodes.Where(n => n.Layer == RenderLayer.HTML && n.Group == null))
+        @foreach (var node in DiagramManager.Nodes.Where(n => n.Layer == RenderLayer.HTML))
         {
             <NodeRenderer @key="node.Id" Node="node" />
         }
