--- a/src/Blazor.Diagrams/wwwroot/default.styles.css
+++ b/src/Blazor.Diagrams/wwwroot/default.styles.css
@@ -87,3 +87,12 @@
 .diagram-navigator.default .current-view {
     border: 2px solid #40babd;
 }
+
+.group {
+    border: 1px solid black;
+    background: rgb(198, 198, 198);
+}
+
+    .group.selected {
+        border: 1px solid #6e9fd4;
+    }
