refactor & fixes + SizeChanged event on nodes

--- a/samples/SharedDemo/Demos/Grouping.razor
+++ b/samples/SharedDemo/Demos/Grouping.razor
@@ -9,8 +9,8 @@
         base.OnInitialized();
 
         LayoutData.Title = "Grouping";
-        LayoutData.Info = "You can group nodes using CTRL+G and ungroup using CTRL+SHIFT+G.<br>" +
-                "Whenever you select a node that belongs to a group, every other node in the group is also selected.";
+        LayoutData.Info = "You can (un)group nodes using CTRL+ALT+G.<br>" +
+                "Currently, the library doesn't handle nested groups yet nor ports.";
         LayoutData.DataChanged();
     }
 }
