feat: pluggable group widget

--- a/src/Blazor.Diagrams/wwwroot/default.styles.css
+++ b/src/Blazor.Diagrams/wwwroot/default.styles.css
@@ -88,11 +88,11 @@
     border: 2px solid #40babd;
 }
 
-.group {
+/*.group {
     border: 2px solid black;
     background: rgb(198, 198, 198);
 }
 
     .group.selected {
         border: 2px solid #6e9fd4;
-    }
+    }*/
