--- a/src/Blazor.Diagrams/wwwroot/default.styles.css
+++ b/src/Blazor.Diagrams/wwwroot/default.styles.css
@@ -89,10 +89,10 @@
 }
 
 .group {
-    border: 2px solid black;
+    outline: 2px solid black;
     background: rgb(198, 198, 198);
 }
 
     .group.selected {
-        border: 2px solid #6e9fd4;
+        outline: 2px solid #6e9fd4;
     }
