feat: locked class on nodes

--- a/src/Blazor.Diagrams/wwwroot/style.css
+++ b/src/Blazor.Diagrams/wwwroot/style.css
@@ -36,6 +36,10 @@
     pointer-events: all;
 }
 
+.node.locked {
+    cursor: pointer;
+}
+
 .link {
     pointer-events: all;
     cursor: pointer;
