--- a/src/Blazor.Diagrams/Components/DiagramCanvas.razor
+++ b/src/Blazor.Diagrams/Components/DiagramCanvas.razor
@@ -31,7 +31,7 @@
 
         @foreach (var group in DiagramManager.Groups)
         {
-            <GroupRenderer Group="group" />
+            <GroupRenderer @key="group.Id" Group="group" />
         }
 
         @foreach (var node in DiagramManager.Nodes.Where(n => n.Layer == RenderLayer.HTML))
