refactor: cascade Group to GroupLinks/Nodes instead of container

--- a/src/Blazor.Diagrams/Components/Groups/GroupContainer.razor
+++ b/src/Blazor.Diagrams/Components/Groups/GroupContainer.razor
@@ -4,7 +4,7 @@
      @onmousedown:stopPropagation
      @onmouseup="OnMouseUp"
      @onmouseup:stopPropagation>
-    <CascadingValue Value="this">
+    <CascadingValue Value="Group">
         @ChildContent
     </CascadingValue>
 </div>
