--- a/src/Blazor.Diagrams/Components/Groups/GroupContainer.razor
+++ b/src/Blazor.Diagrams/Components/Groups/GroupContainer.razor
@@ -1,5 +1,6 @@
 ﻿<div class="group @(Group.Selected ? " selected" : "")"
-     style="top: @(Y.ToInvariantString())px; left: @(X.ToInvariantString())px;width: @(Width.ToInvariantString())px; height: @(Height.ToInvariantString())px;"
+     style="top: @(Group.Position.Y.ToInvariantString())px; left: @(Group.Position.X.ToInvariantString())px;
+            width: @(Group.Size.Width.ToInvariantString())px; height: @(Group.Size.Height.ToInvariantString())px;"
      @onmousedown="OnMouseDown"
      @onmousedown:stopPropagation
      @onmouseup="OnMouseUp"
