--- a/src/Blazor.Diagrams/Components/Groups/GroupNodes.razor
+++ b/src/Blazor.Diagrams/Components/Groups/GroupNodes.razor
@@ -5,7 +5,7 @@
 
 <div class="layer"
      style="top: @((-Group.Position.Y).ToInvariantString())px; left: @((-Group.Position.X).ToInvariantString())px">
-    @foreach (var node in Group.Group.Children)
+    @foreach (var node in Group.Children)
     {
         if (node is GroupModel g)
         {
