--- a/src/Blazor.Diagrams/Components/Groups/DefaultGroupWidget.razor
+++ b/src/Blazor.Diagrams/Components/Groups/DefaultGroupWidget.razor
@@ -3,7 +3,7 @@
     public GroupModel Group { get; set; }
 }
 
-<GroupContainer Group="Group">
+<GroupContainer Group="Group" Class="default">
     <GroupLinks></GroupLinks>
     <GroupNodes></GroupNodes>
 </GroupContainer>
