feat: group ports

--- a/src/Blazor.Diagrams/Components/Groups/DefaultGroupWidget.razor
+++ b/src/Blazor.Diagrams/Components/Groups/DefaultGroupWidget.razor
@@ -6,4 +6,9 @@
 <GroupContainer Group="Group" Class="default">
     <GroupLinks></GroupLinks>
     <GroupNodes></GroupNodes>
+
+    @foreach (var port in Group.Ports)
+    {
+        <PortRenderer Port="port" Class="group-port"></PortRenderer>
+    }
 </GroupContainer>
