--- a/samples/SharedDemo/_Imports.razor
+++ b/samples/SharedDemo/_Imports.razor
@@ -7,3 +7,4 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Blazor.Diagrams.Core.Extensions;
 @using Blazor.Diagrams.Components.Renderers;
+@using Blazor.Diagrams.Components.Groups;
