--- a/samples/SharedDemo/wwwroot/css/styles.css
+++ b/samples/SharedDemo/wwwroot/css/styles.css
@@ -1615,3 +1615,21 @@ body {
 .bg-primary {
     background: #40babd !important;
 }
+
+.group.custom {
+    outline: 2px solid black;
+    background-color: #6fbb6e;
+}
+
+    .group.custom > span.title {
+        padding: 20px;
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background: #eee;
+        border: 2px solid black;
+        border-radius: 50%;
+        background-color: #6fbb6e;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
